--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -120,14 +120,14 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lok-UB-N6n">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="AkW-YL-N9f">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="AkW-YL-N9f">
                                     <size key="itemSize" width="197" height="224"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="WallPaperCollectionViewCell" reuseIdentifier="WallPaperCollectionViewCell" id="CqL-gL-C6T" customClass="WallPaperCollectionViewCell" customModule="IORA" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="FavoriteWallpaperCollectionViewCell" reuseIdentifier="FavoriteWallpaperCollectionViewCell" id="CqL-gL-C6T" customClass="FavoriteWallpaperCollectionViewCell" customModule="IORA" customModuleProvider="target">
                                         <rect key="frame" x="89" y="0.0" width="197" height="224"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6BY-n8-EjV">
@@ -137,7 +137,7 @@
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="V3E-BN-TkX">
                                                     <rect key="frame" x="88.666666666666671" y="102" width="20" height="20"/>
                                                 </activityIndicatorView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fl8-4k-aUL">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Fl8-4k-aUL">
                                                     <rect key="frame" x="0.0" y="0.0" width="197" height="224"/>
                                                 </imageView>
                                             </subviews>
@@ -152,11 +152,14 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="197" height="224"/>
                                         <connections>
-                                            <outlet property="activityIndicator" destination="V3E-BN-TkX" id="Vt0-vl-dNW"/>
-                                            <outlet property="wallpaperImageView" destination="Fl8-4k-aUL" id="PYQ-tT-4Yf"/>
+                                            <outlet property="activityIndicator" destination="V3E-BN-TkX" id="uH5-bg-CoN"/>
+                                            <outlet property="wallpaperImageView" destination="Fl8-4k-aUL" id="qpe-Rk-M8W"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="delegate" destination="gwj-eN-71z" id="Y0F-f6-nvB"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -187,7 +190,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tUJ-ry-htU">
                                 <rect key="frame" x="0.0" y="88" width="375" height="641"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vhU-DN-PE1">
                                     <size key="itemSize" width="338" height="342"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -270,7 +273,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tUJ-ry-htU" firstAttribute="top" secondItem="kOF-LI-q4e" secondAttribute="top" id="bVD-I6-CHe"/>
                             <constraint firstItem="kOF-LI-q4e" firstAttribute="bottom" secondItem="tUJ-ry-htU" secondAttribute="bottom" id="n4R-vu-igO"/>
@@ -683,31 +686,45 @@ Check your connection</string>
                                 <collectionViewLayout key="collectionViewLayout" id="kyU-4M-ah7" customClass="CenteredCollectionViewFlowLayout" customModule="CenteredCollectionView"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DetailCollectionViewCell" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="DetailCollectionViewCell" id="yyf-Wy-AQk" customClass="DetailCollectionViewCell" customModule="IORA" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="170" height="189"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XFi-fm-mmp">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="170" height="189"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="EVE-3s-NGX">
-                                                    <rect key="frame" x="15" y="15" width="20" height="20"/>
+                                                    <rect key="frame" x="75" y="84.666666666666671" width="20" height="20"/>
                                                 </activityIndicatorView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8J2-Me-hif">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="189"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hMV-ek-QtC">
+                                                    <rect key="frame" x="117" y="3" width="50" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="9kI-VQ-wwe"/>
+                                                        <constraint firstAttribute="height" constant="50" id="qTL-Uj-KEy"/>
+                                                    </constraints>
+                                                    <state key="normal" image="star"/>
+                                                    <connections>
+                                                        <action selector="addFavoriteAction:" destination="yyf-Wy-AQk" eventType="touchUpInside" id="Wc5-gY-9Qr"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="EVE-3s-NGX" firstAttribute="centerX" secondItem="XFi-fm-mmp" secondAttribute="centerX" id="5BV-nJ-aXx"/>
+                                                <constraint firstAttribute="trailing" secondItem="hMV-ek-QtC" secondAttribute="trailing" constant="3" id="G0C-DV-HAk"/>
                                                 <constraint firstItem="EVE-3s-NGX" firstAttribute="centerY" secondItem="XFi-fm-mmp" secondAttribute="centerY" id="Qt1-48-dKc"/>
                                                 <constraint firstItem="8J2-Me-hif" firstAttribute="top" secondItem="XFi-fm-mmp" secondAttribute="top" id="W2C-aF-f4N"/>
                                                 <constraint firstItem="8J2-Me-hif" firstAttribute="leading" secondItem="XFi-fm-mmp" secondAttribute="leading" id="Wr7-fj-rPo"/>
                                                 <constraint firstAttribute="trailing" secondItem="8J2-Me-hif" secondAttribute="trailing" id="gfP-5k-o4V"/>
+                                                <constraint firstItem="hMV-ek-QtC" firstAttribute="top" secondItem="XFi-fm-mmp" secondAttribute="top" constant="3" id="nY1-mu-Uu6"/>
                                                 <constraint firstAttribute="bottom" secondItem="8J2-Me-hif" secondAttribute="bottom" id="sVF-6L-jeg"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="50" height="50"/>
+                                        <size key="customSize" width="170" height="189"/>
                                         <connections>
                                             <outlet property="activityIndicator" destination="EVE-3s-NGX" id="GOT-b7-7aS"/>
+                                            <outlet property="starButton" destination="hMV-ek-QtC" id="Kmd-co-7lu"/>
                                             <outlet property="wallPaperImageView" destination="8J2-Me-hif" id="PXf-C0-LiY"/>
                                         </connections>
                                     </collectionViewCell>
@@ -801,7 +818,7 @@ Check your connection</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mwb-BH-vfB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2585" y="165"/>
+            <point key="canvasLocation" x="2584.8000000000002" y="164.77832512315271"/>
         </scene>
         <!--calendarVC-->
         <scene sceneID="u16-GI-6Lu">
@@ -1161,7 +1178,7 @@ Check your connection</string>
         <scene sceneID="GwC-x2-fTz">
             <objects>
                 <navigationController storyboardIdentifier="mainNav" title="mainNav" automaticallyAdjustsScrollViewInsets="NO" id="8tw-gG-953" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="List" image="square.grid.2x2" catalog="system" selectedImage="square.grid.2x2" id="bTt-Qb-Az0">
+                    <tabBarItem key="tabBarItem" title="List" image="list" id="bTt-Qb-Az0">
                         <color key="badgeColor" name="mainColor"/>
                     </tabBarItem>
                     <toolbarItems/>
@@ -1182,7 +1199,7 @@ Check your connection</string>
         <scene sceneID="7F0-dk-lF8">
             <objects>
                 <navigationController storyboardIdentifier="favoriteNav" title="favoriteNav" automaticallyAdjustsScrollViewInsets="NO" id="M45-bV-G1m" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Favorite" image="star" catalog="system" selectedImage="star" id="hZm-GG-FcV"/>
+                    <tabBarItem key="tabBarItem" title="Favorite" image="tab_star" id="hZm-GG-FcV"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" hidden="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nKe-rz-sEj">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
@@ -1201,7 +1218,7 @@ Check your connection</string>
         <scene sceneID="C1M-Ax-pcj">
             <objects>
                 <navigationController storyboardIdentifier="categoryNav" title="categoryNav" automaticallyAdjustsScrollViewInsets="NO" id="Ifg-4u-rPv" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Category" image="share" selectedImage="share" id="D91-a4-3nj">
+                    <tabBarItem key="tabBarItem" title="Category" image="category" id="D91-a4-3nj">
                         <color key="badgeColor" name="mainColor"/>
                     </tabBarItem>
                     <toolbarItems/>
@@ -1222,8 +1239,10 @@ Check your connection</string>
     <resources>
         <image name="Bcalendar" width="33" height="33"/>
         <image name="back" width="33" height="33"/>
+        <image name="category" width="28.333333969116211" height="28.333333969116211"/>
         <image name="download" width="33" height="33"/>
         <image name="filter" width="33" height="33"/>
+        <image name="list" width="28.333333969116211" height="28.333333969116211"/>
         <image name="pCalendar" width="33" height="33"/>
         <image name="pClose" width="33" height="33"/>
         <image name="pDownload" width="33" height="33"/>
@@ -1232,8 +1251,8 @@ Check your connection</string>
         <image name="search" width="33" height="33"/>
         <image name="search_back" width="23.333333969116211" height="23.333333969116211"/>
         <image name="share" width="33" height="33"/>
-        <image name="square.grid.2x2" catalog="system" width="128" height="114"/>
-        <image name="star" catalog="system" width="128" height="116"/>
+        <image name="star" width="37.666667938232422" height="37.666667938232422"/>
+        <image name="tab_star" width="28.333333969116211" height="28.333333969116211"/>
         <namedColor name="mainColor">
             <color red="0.63137254901960782" green="0.80392156862745101" blue="0.73725490196078436" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
